syntax = "proto3";

package wallguard_authorization;

import "google/protobuf/empty.proto";

message AuthorizationRequest {
  string organization_id = 1;
  string device_uuid = 2;
}

message AuthorizationStatus {
  oneof state {
    google.protobuf.Empty pending = 1;
    AuthorizationRejected rejected = 2;
    AuthorizationApproved approved = 3;
  }
}

message AuthorizationApproved {
  string app_id = 1;
  string app_secret = 2;
}

message AuthorizationRejected {
  RejectionReason reason = 1;
}

enum RejectionReason {
  UUID_IN_USE = 0;
  ALREADY_CONNECTED = 1;  
}